syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI
   34     | IF LP Exp error RP Stmt ELSE Stmt

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI
   38    | Specifier DecList error SEMI

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 33 34 38
    INT (258) 18 59
    FLOAT (259) 60
    ID (260) 14 16 17 19 20 54 55 57 58
    SEMI (261) 4 5 7 27 29 33 37 38
    COMMA (262) 9 21 40 61
    ASSIGNOP (263) 42 43
    RELOP (264) 46
    PLUS (265) 47
    MINUS (266) 48 52
    STAR (267) 49
    DIV (268) 50
    AND (269) 44
    OR (270) 45
    DOT (271) 57
    NOT (272) 53
    TYPE (273) 10
    LP (274) 19 20 30 31 32 34 51 54 55
    RP (275) 19 20 30 31 32 34 51 54 55
    LB (276) 18 56
    RB (277) 18 56
    LC (278) 12 24
    RC (279) 12 24
    STRUCT (280) 12 13
    RETURN (281) 29
    IF (282) 30 31 34
    ELSE (283) 31 34
    WHILE (284) 32
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList (35)
        on left: 8 9
        on right: 4 9
    Specifier (36)
        on left: 10 11
        on right: 4 5 6 7 23 37 38
    StructSpecifier (37)
        on left: 12 13
        on right: 11
    OptTag (38)
        on left: 14 15
        on right: 12
    Tag (39)
        on left: 16
        on right: 13
    VarDec (40)
        on left: 17 18
        on right: 8 9 18 23 41 42
    FunDec (41)
        on left: 19 20
        on right: 6 7
    VarList (42)
        on left: 21 22
        on right: 19 21
    ParamDec (43)
        on left: 23
        on right: 21 22
    CompSt (44)
        on left: 24
        on right: 6 28
    StmtList (45)
        on left: 25 26
        on right: 24 25
    Stmt (46)
        on left: 27 28 29 30 31 32 33 34
        on right: 25 30 31 32 34
    DefList (47)
        on left: 35 36
        on right: 12 24 35
    Def (48)
        on left: 37 38
        on right: 35
    DecList (49)
        on left: 39 40
        on right: 37 38 40
    Dec (50)
        on left: 41 42
        on right: 39 40
    Exp (51)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 27 29 30 31 32 34 42 43 44 45 46 47 48 49 50 51 52 53 56 57 61 62
    Args (52)
        on left: 61 62
        on right: 54 61


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 23
    LC    shift, and go to state 24

    CompSt  go to state 25


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 24

   24 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   37 Def: Specifier . DecList SEMI
   38    | Specifier . DecList error SEMI

    ID  shift, and go to state 33

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


State 27

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 40


State 28

   35 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 28


State 29

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 30

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 42


State 31

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 43


State 32

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 44

    $default  reduce using rule 22 (VarList)


State 33

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 34

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 35

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 36

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 24
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 57
    Stmt      go to state 58
    Exp       go to state 59


State 37

   18 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 22

    $default  reduce using rule 41 (Dec)


State 38

   37 Def: Specifier DecList . SEMI
   38    | Specifier DecList . error SEMI

    error  shift, and go to state 61
    SEMI   shift, and go to state 62


State 39

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 39 (DecList)


State 40

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 41

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 42

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 43

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 44

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 45

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 46

   33 Stmt: error . SEMI

    SEMI  shift, and go to state 65


State 47

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


State 48

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


State 49

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 66

    $default  reduce using rule 58 (Exp)


State 50

   52 Exp: MINUS . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 67


State 51

   53 Exp: NOT . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 68


State 52

   51 Exp: LP . Exp RP

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 69


State 53

   29 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 70


State 54

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt
   34     | IF . LP Exp error RP Stmt ELSE Stmt

    LP  shift, and go to state 71


State 55

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


State 56

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 57

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


State 58

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 24
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 74
    Stmt      go to state 58
    Exp       go to state 59


State 59

   27 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


State 60

   42 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 86


State 61

   38 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 87


State 62

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 63

   40 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 37
    DecList  go to state 88
    Dec      go to state 39


State 64

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 65

   33 Stmt: error SEMI .

    $default  reduce using rule 33 (Stmt)


State 66

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    RP     shift, and go to state 89

    Exp   go to state 90
    Args  go to state 91


State 67

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    STAR  shift, and go to state 80
    DIV   shift, and go to state 81
    DOT   shift, and go to state 84
    LB    shift, and go to state 85

    $default  reduce using rule 52 (Exp)


State 68

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 53 (Exp)


State 69

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 92
    LB        shift, and go to state 85


State 70

   29 Stmt: RETURN Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


State 71

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt
   34     | IF LP . Exp error RP Stmt ELSE Stmt

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 94


State 72

   32 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 95


State 73

   24 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 24 (CompSt)


State 74

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 75

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 76

   43 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 96


State 77

   46 Exp: Exp RELOP . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 97


State 78

   47 Exp: Exp PLUS . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 98


State 79

   48 Exp: Exp MINUS . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 99


State 80

   49 Exp: Exp STAR . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 100


State 81

   50 Exp: Exp DIV . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 101


State 82

   44 Exp: Exp AND . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 102


State 83

   45 Exp: Exp OR . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 103


State 84

   57 Exp: Exp DOT . ID

    ID  shift, and go to state 104


State 85

   56 Exp: Exp LB . Exp RB

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 105


State 86

   42 Dec: VarDec ASSIGNOP Exp .
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85

    $default  reduce using rule 42 (Dec)


State 87

   38 Def: Specifier DecList error SEMI .

    $default  reduce using rule 38 (Def)


State 88

   40 DecList: Dec COMMA DecList .

    $default  reduce using rule 40 (DecList)


State 89

   55 Exp: ID LP RP .

    $default  reduce using rule 55 (Exp)


State 90
